--- a/roles/install_defectdojo/tasks/main.yaml
+++ b/roles/install_defectdojo/tasks/main.yaml
@@ -1,8 +1,19 @@
-- name: Run tasks/other.yaml instead of 'main'
-  ansible.builtin.include_role:
-    name: ../install_vpn
+# - name: Run preinstall
+#   include_tasks: ../../preinstall/tasks/main.yml
 
-
-- name: install defectdojo
-  include_tasks: install_defectdojo.yml
+- block:
+    
+  - name: install defectdojo with certs 
+    include_tasks: install_defectdojo_ssl.yml
+    when: defectdojo.ssl == true
+  - name: install defectdojo without certs
+    include_tasks: install_defectdojo.yml
+    when: defectdojo.ssl != true
+  - name: add new key / value pairs to dict
+    set_fact:
+      ipaddr: "{{ ipaddr | combine({item.key: item.value}) }}"
+    with_items:
+    - { key: '{{ defectdojo.domen }}', value: '{{ ansible_host }}' }
+    delegate_to: "{{ groups['vpn'][0] }}"
+    run_once: true
   when: inventory_hostname in groups['defectdojo']
