--- a/roles/install_onedev/tasks/create_agents.yml
+++ b/roles/install_onedev/tasks/create_agents.yml
@@ -1,8 +1,8 @@
 - name: Create token
   uri:
-    url: https://{{ domen }}/~api/agent-tokens
-    user: "{{ username }}"
-    password: "{{ password }}"
+    url: http://172.29.2.10:6610/~api/agent-tokens
+    user: "{{ onedev.username }}"
+    password: "{{ onedev.password }}"
     method: POST
     body:
       value: "{{ 99999999 | random | to_uuid }}"
@@ -16,9 +16,9 @@
       - "{{ id.json }}"
 - name: get token 
   uri:
-    url: https://{{ domen }}/~api/agent-tokens/{{ id.json }}
-    user: "{{ username }}"
-    password: "{{ password }}"
+    url: http://172.29.2.10:6610/~api/agent-tokens/{{ id.json }}
+    user: "{{ onedev.username }}"
+    password: "{{ onedev.password }}"
     method: GET
     force_basic_auth: yes
     status_code: 200
@@ -30,24 +30,22 @@
       - "{{ token.json.value }}"
 - name: Creates directory
   file:
-      path: "{{ item }}"
+      path: "/home/{{ ansible_user }}/agent/{{ item }}"
       state: directory
-  with_items:
-      - "/home/{{ ansible_user }}/agent/{{ inventory_hostname }}"
+  loop: "{{ agents }}"
 - name: Create client.conf  
   template: 
       src: agent.dokcerfile.j2
-      dest: /home/{{ ansible_user }}/agent/{{ inventory_hostname }}/Dockerfile
+      dest: /home/{{ ansible_user }}/agent/{{ item }}/Dockerfile
+  loop: "{{ agents }}"
 - name: Build docker 
   shell:
-    cmd: docker build -t {{ inventory_hostname }} .
-    chdir: /home/{{ ansible_user }}/agent/{{ inventory_hostname }}
+    cmd: docker build -t {{ item }} .
+    chdir: /home/{{ ansible_user }}/agent/{{ item }}
+  loop: "{{ agents }}"
 - name: Run agent
   shell:
-    cmd: docker run -t -v /var/run/docker.sock:/var/run/docker.sock -d -v $(pwd)/agent/work:/agent/work -e serverUrl=https://{{ domen }} -e agentToken={{ token.json.value }} -h {{ inventory_hostname }} {{ inventory_hostname }}
+    cmd: docker run -t -v /var/run/docker.sock:/var/run/docker.sock -d --restart=always -v $(pwd)/agent/work:/agent/work -e serverUrl=https://localhost -e agentToken={{ token.json.value }} -h {{ item }} {{ item }}
     chdir: /home/{{ ansible_user }}/agent/{{ inventory_hostname }}
-  register: container
-- name: echo
-  debug:
-    msg:
-      - "{{ container.stdout }}"
+  loop: "{{ agents }}"
+
