--- a/roles/install_onedev/tasks/main.yml
+++ b/roles/install_onedev/tasks/main.yml
@@ -1,6 +1,24 @@
-# - name: create vpn 
-#   include_tasks: install_onedev.yml
-#   when: inventory_hostname in groups['onedev']
-- name: create agents
-  include_tasks: create_agents.yml
-  when: inventory_hostname in groups['onedev_agents']
+
+
+- block:
+  - name: install defectdojo with certs 
+    include_tasks: install_onedev_ssl.yml
+    when: onedev.ssl == true
+  - name: install defectdojo without certs
+    include_tasks: install_onedev.yml
+    when: onedev.ssl != true
+  - name: Pause for 5 minutes to build app cache
+    ansible.builtin.pause:
+      minutes: 3
+  - name: create agents
+    include_tasks: create_agents.yml
+    when: inventory_hostname in groups['onedev_agents']
+  - name: add new key / value pairs to dict
+    set_fact:
+      ipaddr: "{{ ipaddr | combine({item.key: item.value}) }}"
+    with_items:
+    - { key: '{{ onedev.domen }}', value: '{{ ansible_host }}' }
+    delegate_to: "{{ groups['vpn'][0] }}"
+    run_once: true
+    when: inventory_hostname in groups['onedev']
+  when: inventory_hostname in groups['onedev']
