--- a/roles/install_vault/tasks/main.yml
+++ b/roles/install_vault/tasks/main.yml
@@ -1,30 +1,17 @@
-- block: 
-  - name: Creates directory
-    file:
-      path: "{{ item }}"
-      state: directory
+
+- block:
+  - name: install vault
+    include_tasks: install_vault_ssl.yml
+    when: vault.ssl == true
+  - name: install vault
+    include_tasks: install_vault.yml
+    when: vault.ssl != true
+  - name: add new key / value pairs to dict
+    set_fact:
+      ipaddr: "{{ ipaddr | combine({item.key: item.value}) }}"
     with_items:
-      - "/home/{{ ansible_user }}/Vault-Consul-Docker"
-      - "/home/{{ ansible_user }}/Vault-Consul-Docker/vault"
-      - "/home/{{ ansible_user }}/Vault-Consul-Docker/vault/config"
-      - "/home/{{ ansible_user }}/Vault-Consul-Docker/vault/data"
-      - "/home/{{ ansible_user }}/Vault-Consul-Docker/vault/logs"
-      - "/home/{{ ansible_user }}/Vault-Consul-Docker/vault/policies"
-  - name: copy config files
-    template: 
-        src: "{{ item.name }}"
-        dest: "{{ item.dest }}"
-    loop:
-        - { name: 'Dockerfile.j2' ,
-            dest: '/home/{{ ansible_user }}/Vault-Consul-Docker/vault/Dockerfile' 
-          }
-        - { name: 'docker-compose.yaml.j2' ,
-            dest: '/home/{{ ansible_user }}/Vault-Consul-Docker/docker-compose.yaml' 
-          }
-        - { name: 'vault-config.json.j2' ,
-            dest: '/home/{{ ansible_user }}/Vault-Consul-Docker/vault/config/vault-config.json' 
-          }
-  - name: Start Vault
-    shell: 
-      cmd: docker-compose -f /home/{{ ansible_user }}/Vault-Consul-Docker/docker-compose.yaml up --build -d
+    - { key: '{{ vault.domen }}', value: '{{ ansible_host }}' }
+    delegate_to: "{{ groups['vpn'][0] }}"
+    run_once: true
+    when: inventory_hostname in groups['vault']
   when: inventory_hostname in groups['vault']
