--- a/install_platform.yaml
+++ b/install_platform.yaml
@@ -1,8 +1,22 @@
 ---
 - hosts: all
+  vars_files:
+    - ./global_vars.yml
+  vars: 
+    ipaddr:
+      defectdojo: ""
+      onedev: ""
+      vault: ""
+      dns: ""
+      vpn: ""
   roles:
+   # - role: "./preinstall"
+   # - role: "./install_vpn"
+    # - role: "./install_onedev"
+    # - role: "./install_vault"
+    # - role: "./install_dns"
     - role: "./install_defectdojo"
-  # - role: "./install_onedev"
-#  - role: "./install_vault"
-#  - role: "./install_vpn"
+    #   vars_files: "global_vars.yml"
+   
+    # - role: "./install_vpn"
  #  - role: "./install_defectdojo" 
