--- a/roles/install_wg/tasks/copy_confs.yml
+++ b/roles/install_wg/tasks/copy_confs.yml
@@ -17,12 +17,11 @@
   - name: debug 
     debug:
       msg:  "sed -i 's#^[[Interface]#[Interface]\nPostUp = iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -p tcp --dport 22 -j ACCEPT; iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -p tcp --dport 51820 -j ACCEPT; iptables -A INPUT -s {{ hostvars[groups['vpn'][0]]['ansible_host'] }} -j ACCEPT; iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -j DROP#'"
-  - name: Conifure iptables
-    shell: 
-      #cmd: "sed -i 's#^[[Interface]#[Interface]\nPostUp = iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -p tcp --dport 22 -j ACCEPT; iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -p tcp --dport 51820 -j ACCEPT; iptables -A INPUT -s {{ hostvars[groups['vpn'][0]]['ansible_host'] }} -j ACCEPT; iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -j DROP#' /etc/wireguard/wg0.conf"
-      cmd: "iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -p tcp --dport 22 -j ACCEPT; iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -p tcp --dport 51820 -j ACCEPT; iptables -A INPUT -s {{ hostvars[groups['vpn'][0]]['ansible_host'] }} -j ACCEPT; iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -j DROP"
-          
-
+  # - name: Conifure iptables
+  #   shell: 
+  #     #cmd: "sed -i 's#^[[Interface]#[Interface]\nPostUp = iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -p tcp --dport 22 -j ACCEPT; iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -p tcp --dport 51820 -j ACCEPT; iptables -A INPUT -s {{ hostvars[groups['vpn'][0]]['ansible_host'] }} -j ACCEPT; iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -j DROP#' /etc/wireguard/wg0.conf"
+  #     cmd: "iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -p tcp --dport 22 -j ACCEPT; iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -p tcp --dport 51820 -j ACCEPT; iptables -A INPUT -s {{ hostvars[groups['vpn'][0]]['ansible_host'] }} -j ACCEPT; iptables -A INPUT -i {{ hostvars[item].ansible_default_ipv4.interface }} -j DROP"
+      
   - name: start
     ansible.builtin.systemd:
       name: wg-quick@wg0
