--- a/roles/install_wg/tasks/install.yml
+++ b/roles/install_wg/tasks/install.yml
@@ -26,7 +26,7 @@
 - name: start
   ansible.builtin.systemd:
     name: wg-quick@wg0
-    state: started
+    state: restarted
     enabled: yes
 # - name: Conifure iptables
 #   shell: 
