--- a/install_platform.yaml
+++ b/install_platform.yaml
@@ -1,22 +1,16 @@
----
 - hosts: all
   vars_files:
     - ./global_vars.yml
   vars: 
     ipaddr:
-      defectdojo: ""
-      onedev: ""
-      vault: ""
-      dns: ""
-      vpn: ""
-  roles:
-   # - role: "./preinstall"
-   # - role: "./install_vpn"
-    # - role: "./install_onedev"
-    # - role: "./install_vault"
-    # - role: "./install_dns"
-    - role: "./install_defectdojo"
-    #   vars_files: "global_vars.yml"
-   
-    # - role: "./install_vpn"
- #  - role: "./install_defectdojo" 
+      
+  roles: 
+     #- "./preinstall"
+     #- "./install_vpn"
+     #- "./install_defectdojo"
+     #- "./install_onedev"
+     - "./install_vault"
+     - "./install_prometheus"
+     - "./install_dns"
+     - "./install_wg"  
+     - "./configuration_dns"
